Implemented minimun working API structure
